--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <body>
         <h1>Welcome to Adolphlwq's Home page</h1>
         <p>This is index page for adolphlwq</p>
-        <p><a href="https://blog.adolphlwq.xyz" target="_blank">Adolphlw's Blog</a></p>
+        <p><a href="https://blog.adolphlwq.xyz" target="_blank">Adolphlwq's Blog</a></p>
         <p><a href="https://github.com/adolphlwq" target="_blank">Adolphlwq's GitHub</a></p>
     </body>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-67747174-3', 'auto');
+      ga('send', 'pageview');
+    </script>
 </html>
