add charset and jpg

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>QuanTalk</title>
+        <meta charset="utf-8" />
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+        <meta name="description" content="adolphlwq home page" />
+        <link rel="shortcut icon" href="lwq-square.jpg ">
         <style>
               body {
                   width: 35em;
