--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta name="description" content="adolphlwq home page" />
-        <link rel="shortcut icon" href="lwq-square.jpg ">
+        <link rel="shortcut icon" href="lwq-square.ico">
         <style>
               body {
                   width: 35em;
