[v0.1] update readme and use w3c validator validate index page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>QuanTalk</title>
         <meta charset="utf-8" />
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta name="description" content="adolphlwq home page" />
         <link rel="shortcut icon" href="lwq-square.ico">
         <style>
