--- a/index.html
+++ b/index.html
@@ -5,20 +5,61 @@
         <meta charset="utf-8" />
         <meta name="description" content="adolphlwq home page" />
         <link rel="shortcut icon" href="lwq-square.ico">
-        <style>
-              body {
-                  width: 35em;
-                  margin: 0 auto;
-                  font-family: Tahoma, Verdana, Arial, sans-serif;
-              }
-        </style>
+        <link href="static/main.css" rel="stylesheet">
+        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <script type="text/javascript" src="https://cdn.bootcss.com/vue/1.0.28/vue.min.js"></script>
+        <script type="text/javascript" src="static/main.js"></script>
     </head>
 
     <body>
-        <h1>Welcome to Adolphlwq's Home page</h1>
-        <p>This is index page for adolphlwq</p>
-        <p><a href="https://blog.adolphlwq.xyz" target="_blank">Adolphlwq's Blog</a></p>
-        <p><a href="https://github.com/adolphlwq" target="_blank">Adolphlwq's GitHub</a></p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <h2>qPage for adolphlwq</h2>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="matrix">
+                        <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
+                           GitHub
+                        </a>
+                        <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
+                           Blog
+                        </a>
+                        <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
+                           Weibo
+                        </a>
+                        <a class="media-base matrix-4" href="http://twitter.com/adolphlwq" target="_blank">
+                           Twitter
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-md-offset-2">
+                    <div id="msgSection">
+                        <div class="input-group">
+                            <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
+                            </span>
+                        </div>
+
+                        <div class="input-group">
+                            <ul class="list-group">
+                                <li class="list-group-item" v-for="msg in msgs">{{ msg.text }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
