--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
         <link rel="shortcut icon" href="lwq-square.ico">
         <link href="static/main.css" rel="stylesheet">
         <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        <script type="text/javascript" src="https://cdn.bootcss.com/vue/1.0.28/vue.min.js"></script>
-        <script type="text/javascript" src="static/main.js"></script>
     </head>
 
     <body>
@@ -45,20 +43,23 @@
                 <div class="col-md-6 col-md-offset-2">
                     <div id="msgSection">
                         <div class="input-group">
-                            <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg">
+                            <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg" placeholder="add msg and enter">
                             <span class="input-group-btn">
                                 <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
                             </span>
                         </div>
 
                         <div class="input-group">
-                            <ul class="list-group">
-                                <li class="list-group-item" v-for="msg in msgs">{{ msg.text }}</li>
-                            </ul>
+                          <div class="btn-group msgdiv" v-for="msg in msgs">
+                            <button type="button" v-bind:class="btnObj">{{ msg.text }}</button>
+                          </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="footer">
+          Copyright &copy; 2015-2016 <a href="https://adolphlwq.xyz">adolphlwq</a>
         </div>
     </body>
     <script>
@@ -70,4 +71,6 @@
       ga('create', 'UA-67747174-3', 'auto');
       ga('send', 'pageview');
     </script>
+    <script type="text/javascript" src="https://cdn.bootcss.com/vue/1.0.28/vue.min.js"></script>
+    <script type="text/javascript" src="static/main.js"></script>
 </html>
