--- a/index.html
+++ b/index.html
@@ -12,54 +12,94 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <h2>qPage for adolphlwq</h2>
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 align="center" class="new-h2">HomePage for AdolphLWQ</h2>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+
             <div class="row">
-                <div class="col-md-4">
-                    <div id="matrix">
-                        <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
-                           GitHub
-                        </a>
-                        <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
-                           Blog
-                        </a>
-                        <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
-                           Weibo
-                        </a>
-                        <a class="media-base matrix-4" href="http://twitter.com/adolphlwq" target="_blank">
-                           Twitter
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-md-offset-2">
-                    <div id="msgSection">
-                        <div class="input-group">
-                            <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg" placeholder="add msg and enter">
-                            <span class="input-group-btn">
-                                <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
-                            </span>
-                        </div>
-
-                        <div class="input-group">
-                          <div class="btn-group msgdiv" v-for="msg in msgs">
-                            <button type="button" v-bind:class="btnObj">{{ msg.text }}</button>
-                          </div>
-                        </div>
-                    </div>
+                <div class="box-main">
+                    <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
+                        GitHub
+                    </a>
+                    <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
+                        Blog
+                    </a>
+                    <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
+                        Weibo
+                    </a>
+                    <a class="media-base matrix-4" href="http://twitter.com/adolphlwq" target="_blank">
+                        Twitter
+                    </a>
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 align="center" class="new-h2">GitHub Common Repository Trend</h2>
+                </div>
+            </div>
+            <div class="row new-h2">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=machine-learning&s=stars&type=Repositories" target="_blank">Machine Learning</a>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=deep-learning&s=stars&type=Repositories" target="_blank">Deep Learning</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row new-h2">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=julia&s=stars&type=Repositories" target="_blank">Julia</a>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=golang&s=stars&type=Repositories" target="_blank">Golang</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row new-h2">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=python&s=stars&type=Repositories" target="_blank">Python</a>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://github.com/topics/c?o=desc&s=stars" target="_blank">C</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div id="msgSection">
+                            <div class="input-group">
+                                <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg" placeholder="add msg and enter">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
+                                </span>
+                            </div>
+
+                            <div class="input-group">
+                                <div class="btn-group msgdiv" v-for="msg in msgs">
+                                <button type="button" v-bind:class="btnObj">{{ msg.text }}</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
         <div id="footer">
-          Copyright &copy; 2015-2016 <a href="https://adolphlwq.xyz">adolphlwq</a>
+          Copyright &copy; 2015-2018 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
         </div>
     </body>
     <script>
