--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>QuanTalk</title>
+        <title>AdolphLWQ HomePage</title>
         <meta charset="utf-8" />
         <meta name="description" content="adolphlwq home page" />
         <link rel="shortcut icon" href="lwq-square.ico">
         <link href="static/main.css" rel="stylesheet">
+        <link href="static/needsharebutton.min.css" rel="stylesheet">
         <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     </head>
 
@@ -97,6 +98,9 @@
                     </div>
             </div>
         </div>
+        <div>
+            <button class="btn btn-default need-share-button" data-share-icon-style="box" data-share-networks="Weibo,Wechat,Douban,Twitter,Facebook,GooglePlus,Linkedin,Pinterest,Tumblr" data-share-position="topRight">Share</button>
+        </div>
 
         <div id="footer">
           Copyright &copy; 2015-2018 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
@@ -113,4 +117,5 @@
     </script>
     <script type="text/javascript" src="https://cdn.bootcss.com/vue/1.0.28/vue.min.js"></script>
     <script type="text/javascript" src="static/main.js"></script>
+    <script type="text/javascript" src="static/needsharebutton.min.js"></script>
 </html>
