add book top and update css

--- a/index.html
+++ b/index.html
@@ -79,6 +79,48 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 align="center" class="new-h2">Information Bee</h2>
+                </div>
+            </div>
+            <div class="row new-h2">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="http://book.jd.com/booktop/0-0-0.html?category=3287-0-0-0-10003-1#comfort" target="_blank">JD CS Book Top</a>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="http://bang.dangdang.com/books/bestsellers/01.54.00.00.00.00-recent30-0-0-1-1" target="_blank">DangDang CS Book Top</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row new-h2">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://www.amazon.cn/gp/bestsellers/books/658414051" target="_blank">Amazon(China) CS Book Top</a>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://www.amazon.cn/gp/bestsellers/digital-text/116169071" target="_blank">Amazon(China) Kindle Book Top</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row new-h2">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="https://www.amazon.com/Best-Sellers-Books-Computers-Technology/zgbs/books/5/ref=zg_bs_unv_b_2_3448_1" target="_blank">Amazon CS Book Top</a>
+                        </div>
+                        <div class="btn-group" role="group">
+                            <a type="button" class="btn btn-default" href="" target="_blank">On Going...</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="container">
                     <div class="col-md-8 col-md-offset-2">
                         <div id="msgSection">
@@ -103,7 +145,7 @@
         </div>
 
         <div id="footer">
-          Copyright &copy; 2015-2018 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
+          Copyright &copy; 2015-2019 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
         </div>
     </body>
     <script>
