--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="lwq-square.ico">
         <link href="static/main.css" rel="stylesheet">
         <link href="static/needsharebutton.min.css" rel="stylesheet">
-        <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     </head>
 
     <body>
@@ -157,7 +157,7 @@
       ga('create', 'UA-67747174-3', 'auto');
       ga('send', 'pageview');
     </script>
-    <script type="text/javascript" src="https://cdn.bootcss.com/vue/1.0.28/vue.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.28/vue.min.js"></script>
     <script type="text/javascript" src="static/main.js"></script>
     <script type="text/javascript" src="static/needsharebutton.min.js"></script>
 </html>
