add wechat subscribe image

--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div>
+                    <img style="width: 200px; max-width: 100%;" class="img-responsive center-block" src="https://i.loli.net/2019/04/14/5cb21c2fad2a9.jpg" alt="专注于计算机科学与技术、独立思考、阅读分享">
+                </div>
+                <div class="col-md-8 col-md-offset-2">
+                    <h5 align="center">专注于计算机科学与技术、独立思考、阅读分享</h5>
+                </div>
+            </div>
+
             <div class="container">
                     <div class="col-md-8 col-md-offset-2">
                         <div id="msgSection">
@@ -145,7 +154,7 @@
         </div>
 
         <div id="footer">
-          Copyright &copy; 2015-2019 <a href="https://algcs.xyz">AdolphLWQ</a>
+          Copyright &copy; 2015-2019 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
         </div>
     </body>
     <script>
