--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
                         GitHub
                     </a>
-                    <a class="media-base matrix-2" href="https://blog.algcs.xyz" target="_blank">
+                    <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
                         Blog
                     </a>
                     <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
