add baidu tongji

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <link href="static/main.css" rel="stylesheet">
         <link href="static/needsharebutton.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+              var hm = document.createElement("script");
+              hm.src = "https://hm.baidu.com/hm.js?dcb07ecd50e5f7936fe557befc141653";
+              var s = document.getElementsByTagName("script")[0]; 
+              s.parentNode.insertBefore(hm, s);
+            })();
+        </script>            
     </head>
 
     <body>
