--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <img style="width: 200px; max-width: 100%;" class="img-responsive center-block" src="https://i.loli.net/2019/04/14/5cb21c2fad2a9.jpg" alt="专注于计算机科学与技术、独立思考、阅读分享">
                 </div>
                 <div class="col-md-8 col-md-offset-2">
-                    <h5 align="center">专注于计算机科学与技术、独立思考、阅读分享</h5>
+                    <h5 align="center">专注于计算机科学与技术、独立思考、阅读分享，开发者认知、学习、成长平台。</h5>
                 </div>
             </div>
 
