update qrcode and ico file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>AdolphLWQ HomePage</title>
+        <title>陆道峰的个人主页</title>
         <meta charset="utf-8" />
         <meta name="description" content="adolphlwq home page" />
-        <link rel="shortcut icon" href="lwq-square.ico">
+        <link rel="shortcut icon" href="mlsys.ico">
         <link href="static/main.css" rel="stylesheet">
         <link href="static/needsharebutton.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 align="center" class="new-h2">HomePage for AdolphLWQ</h2>
+                    <h2 align="center" class="new-h2">陆道峰的个人主页</h2>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
 
             <div class="row">
                 <div>
-                    <img style="width: 200px; max-width: 100%;" class="img-responsive center-block" src="https://i.loli.net/2019/04/14/5cb21c2fad2a9.jpg" alt="专注于计算机科学与技术、独立思考、阅读分享">
+                    <img style="width: 200px; max-width: 100%;" class="img-responsive center-block" src="https://raw.githubusercontent.com/adolphlwq/osshub/master/oss/wechat/wechat_sysml.jpg" alt="专注于计算机科学与技术、独立思考、阅读分享">
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <h5 align="center">专注于计算机科学与技术、分布式计算、容器技术和人工智能，记录开发者认知、学习和成长。</h5>
