--- a/index.html
+++ b/index.html
@@ -1,182 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>陆道峰的个人主页</title>
-        <meta charset="utf-8" />
-        <meta name="description" content="adolphlwq home page" />
-        <link rel="shortcut icon" href="mlsys.ico">
-        <link href="static/main.css" rel="stylesheet">
-        <link href="static/needsharebutton.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    
-        <script>
-            var _hmt = _hmt || [];
-            (function() {
-              var hm = document.createElement("script");
-              hm.src = "https://hm.baidu.com/hm.js?dcb07ecd50e5f7936fe557befc141653";
-              var s = document.getElementsByTagName("script")[0]; 
-              s.parentNode.insertBefore(hm, s);
-            })();
-        </script>            
-    </head>
 
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h2 align="center" class="new-h2">陆道峰的个人主页</h2>
-                </div>
-            </div>
+<head>
+    <title>陆道峰的个人主页</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="adolphlwq home page" />
+    <link rel="shortcut icon" href="mlsys.ico">
+    <link href="static/main.css" rel="stylesheet">
+    <link href="static/needsharebutton.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-            <div class="row">
-                <div class="box-main">
-                    <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
-                        GitHub
-                    </a>
-                    <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
-                        Blog
-                    </a>
-                    <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
-                        Weibo
-                    </a>
-                    <a class="media-base matrix-4" href="http://twitter.com/adolphlwq" target="_blank">
-                        Twitter
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h2 align="center" class="new-h2">GitHub Common Repository Trend</h2>
-                </div>
-            </div>
-            <div class="row new-h2">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=machine-learning&s=stars&type=Repositories" target="_blank">Machine Learning</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=deep-learning&s=stars&type=Repositories" target="_blank">Deep Learning</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row new-h2">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=julia&s=stars&type=Repositories" target="_blank">Julia</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=golang&s=stars&type=Repositories" target="_blank">Golang</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row new-h2">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://github.com/search?o=desc&q=python&s=stars&type=Repositories" target="_blank">Python</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://github.com/topics/c?o=desc&s=stars" target="_blank">C</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h2 align="center" class="new-h2">Information Bee</h2>
-                </div>
-            </div>
-            <div class="row new-h2">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="http://book.jd.com/booktop/0-0-0.html?category=3287-0-0-0-10003-1#comfort" target="_blank">JD CS Book Top</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="http://bang.dangdang.com/books/bestsellers/01.54.00.00.00.00-recent30-0-0-1-1" target="_blank">DangDang CS Book Top</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row new-h2">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://www.amazon.cn/gp/bestsellers/books/658414051" target="_blank">Amazon(China) CS Book Top</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://www.amazon.cn/gp/bestsellers/digital-text/116169071" target="_blank">Amazon(China) Kindle Book Top</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row new-h2">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://www.amazon.com/Best-Sellers-Books-Computers-Technology/zgbs/books/5/ref=zg_bs_unv_b_2_3448_1" target="_blank">Amazon CS Book Top</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-default" href="https://book.douban.com/tag/%E7%BC%96%E7%A8%8B?type=S" target="_blank">Douban CS Book</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div>
-                    <img style="width: 200px; max-width: 100%;" class="img-responsive center-block" src="https://raw.githubusercontent.com/adolphlwq/osshub/master/oss/wechat/wechat_sysml.jpg" alt="专注于计算机科学与技术、独立思考、阅读分享">
-                </div>
-                <div class="col-md-8 col-md-offset-2">
-                    <h5 align="center">专注于计算机科学与技术、分布式计算、容器技术和人工智能，记录开发者认知、学习和成长。</h5>
-                </div>
-            </div>
-
-            <div class="container">
-                    <div class="col-md-8 col-md-offset-2">
-                        <div id="msgSection">
-                            <div class="input-group">
-                                <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg" placeholder="add msg and enter">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
-                                </span>
-                            </div>
-
-                            <div class="input-group">
-                                <div class="btn-group msgdiv" v-for="msg in msgs">
-                                <button type="button" v-bind:class="btnObj">{{ msg.text }}</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-            </div>
-        </div>
-        <div>
-            <button class="btn btn-default need-share-button" data-share-icon-style="box" data-share-networks="Weibo,Wechat,Douban,Twitter,Facebook,GooglePlus,Linkedin,Pinterest,Tumblr" data-share-position="topRight">Share</button>
-        </div>
-
-        <div id="footer">
-          Copyright &copy; 2015-2020 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
-        </div>
-    </body>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-67747174-3', 'auto');
-      ga('send', 'pageview');
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?dcb07ecd50e5f7936fe557befc141653";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
     </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.28/vue.min.js"></script>
-    <script type="text/javascript" src="static/main.js"></script>
-    <script type="text/javascript" src="static/needsharebutton.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2 align="center" class="new-h2">陆道峰的个人主页</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="box-main">
+                <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
+                    GitHub
+                </a>
+                <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
+                    Blog
+                </a>
+                <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
+                    Weibo
+                </a>
+                <a class="media-base matrix-4" href="http://twitter.com/adolphlwq" target="_blank">
+                    Twitter
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2 align="center" class="new-h2">GitHub Common Repository Trend</h2>
+            </div>
+        </div>
+        <div class="row new-h2">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://github.com/search?o=desc&q=machine-learning&s=stars&type=Repositories"
+                            target="_blank">Machine Learning</a>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://github.com/search?o=desc&q=deep-learning&s=stars&type=Repositories"
+                            target="_blank">Deep Learning</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row new-h2">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://github.com/search?o=desc&q=julia&s=stars&type=Repositories"
+                            target="_blank">Julia</a>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://github.com/search?o=desc&q=golang&s=stars&type=Repositories"
+                            target="_blank">Golang</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row new-h2">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://github.com/search?o=desc&q=python&s=stars&type=Repositories"
+                            target="_blank">Python</a>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default" href="https://github.com/topics/c?o=desc&s=stars"
+                            target="_blank">C</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2 align="center" class="new-h2">Information Bee</h2>
+            </div>
+        </div>
+        <div class="row new-h2">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="http://book.jd.com/booktop/0-0-0.html?category=3287-0-0-0-10003-1#comfort"
+                            target="_blank">JD CS Book Top</a>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="http://bang.dangdang.com/books/bestsellers/01.54.00.00.00.00-recent30-0-0-1-1"
+                            target="_blank">DangDang CS Book Top</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row new-h2">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://www.amazon.cn/gp/bestsellers/books/658414051" target="_blank">Amazon(China) CS
+                            Book Top</a>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://www.amazon.cn/gp/bestsellers/digital-text/116169071"
+                            target="_blank">Amazon(China) Kindle Book Top</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row new-h2">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://www.amazon.com/Best-Sellers-Books-Computers-Technology/zgbs/books/5/ref=zg_bs_unv_b_2_3448_1"
+                            target="_blank">Amazon CS Book Top</a>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <a type="button" class="btn btn-default"
+                            href="https://book.douban.com/tag/%E7%BC%96%E7%A8%8B?type=S" target="_blank">Douban CS
+                            Book</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div>
+                <img style="width: 200px; max-width: 100%;" class="img-responsive center-block"
+                    src="https://raw.githubusercontent.com/adolphlwq/osshub/master/oss/wechat/wechat_sysml.jpg"
+                    alt="专注于计算机科学与技术、独立思考、阅读分享">
+            </div>
+            <div class="col-md-8 col-md-offset-2">
+                <h5 align="center">菜鸡工程师，啥也不会，瑟瑟发抖...</h5>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="col-md-8 col-md-offset-2">
+                <div id="msgSection">
+                    <div class="input-group">
+                        <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg"
+                            placeholder="add msg and enter">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
+                        </span>
+                    </div>
+
+                    <div class="input-group">
+                        <div class="btn-group msgdiv" v-for="msg in msgs">
+                            <button type="button" v-bind:class="btnObj">{{ msg.text }}</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <button class="btn btn-default need-share-button" data-share-icon-style="box"
+            data-share-networks="Weibo,Wechat,Douban,Twitter,Facebook,GooglePlus,Linkedin,Pinterest,Tumblr"
+            data-share-position="topRight">Share</button>
+    </div>
+
+    <div id="footer">
+        Copyright &copy; 2015-2020 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
+    </div>
+</body>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-67747174-3', 'auto');
+    ga('send', 'pageview');
+</script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.28/vue.min.js"></script>
+<script type="text/javascript" src="static/main.js"></script>
+<script type="text/javascript" src="static/needsharebutton.min.js"></script>
+
 </html>
