--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
                     GitHub
                 </a>
-                <a class="media-base matrix-2" href="https://blog.adolphlwq.xyz" target="_blank">
+                <a class="media-base matrix-2" href="https://blog.alwq.xyz" target="_blank">
                     Blog
                 </a>
                 <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
@@ -193,7 +193,7 @@
     </div>
 
     <div id="footer">
-        Copyright &copy; 2015-2020 <a href="https://adolphlwq.xyz">AdolphLWQ</a>
+        Copyright &copy; 2015-2021 <a href="https://alwq.xyz">AdolphLWQ</a>
     </div>
 </body>
 <script>
