--- a/index.html
+++ b/index.html
@@ -5,20 +5,10 @@
     <title>陆道峰的个人主页</title>
     <meta charset="utf-8" />
     <meta name="description" content="adolphlwq home page" />
-    <link rel="shortcut icon" href="mlsys.ico">
+    <link rel="shortcut icon" href="http://www.catb.org/hacker-emblem/glider.ico">
     <link href="static/main.css" rel="stylesheet">
     <link href="static/needsharebutton.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-
-    <script>
-        var _hmt = _hmt || [];
-        (function () {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?dcb07ecd50e5f7936fe557befc141653";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
 </head>
 
 <body>
@@ -34,7 +24,7 @@
                 <a class="media-base matrix-1" href="https://github.com/adolphlwq" target="_blank">
                     GitHub
                 </a>
-                <a class="media-base matrix-2" href="https://alwq.xyz/blog" target="_blank">
+                <a class="media-base matrix-2" href="https://blog.alwq.xyz" target="_blank">
                     Blog
                 </a>
                 <a class="media-base matrix-3" href="http://weibo.com/adolphlwq" target="_blank">
@@ -165,26 +155,6 @@
                 <h5 align="center">菜鸡工程师，啥也不会，瑟瑟发抖...</h5>
             </div>
         </div>
-
-        <div class="container">
-            <div class="col-md-8 col-md-offset-2">
-                <div id="msgSection">
-                    <div class="input-group">
-                        <input type="text" class="form-control" v-model="newMsg" v-on:keyup.enter="addMsg"
-                            placeholder="add msg and enter">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" v-on:click="addMsg">Go!</button>
-                        </span>
-                    </div>
-
-                    <div class="input-group">
-                        <div class="btn-group msgdiv" v-for="msg in msgs">
-                            <button type="button" v-bind:class="btnObj">{{ msg.text }}</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <div>
         <button class="btn btn-default need-share-button" data-share-icon-style="box"
@@ -193,21 +163,27 @@
     </div>
 
     <div id="footer">
-        Copyright &copy; 2015-2021 <a href="https://github.com/adolphlwq">AdolphLWQ</a>
+        Copyright &copy; 2015-2022 <a href="https://github.com/adolphlwq">AdolphLWQ</a>
     </div>
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3G7RFWBJ8D"></script>
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    ga('create', 'UA-67747174-3', 'auto');
-    ga('send', 'pageview');
+  gtag('config', 'G-3G7RFWBJ8D');
 </script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.28/vue.min.js"></script>
+<script>
+    var _hmt = _hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?dcb07ecd50e5f7936fe557befc141653";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 <script type="text/javascript" src="static/main.js"></script>
 <script type="text/javascript" src="static/needsharebutton.min.js"></script>
 
