[site] update favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>陆道峰的个人主页</title>
     <meta charset="utf-8" />
     <meta name="description" content="adolphlwq home page" />
-    <link rel="shortcut icon" href="http://www.catb.org/hacker-emblem/glider.ico">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/adolphlwq/osshub/master/oss/facivon/glider.ico">
     <link href="static/main.css" rel="stylesheet">
     <link href="static/needsharebutton.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
